@@ -29,7 +29,8 @@ enum {
 	SOURCE_FILTER,
 	DECODER,
 	DXVA_DECODER,
-	FFMPEG_DECODER
+	FFMPEG_DECODER,
+	FILTER_TYPE_NB
 };
 
 enum SOURCE_FILTER {
